# doove-new

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.changeset/: README.md  better-rivers-stand.md  config.json  cool-tools-return.md  icy-wombats-wink.md  long-dots-laugh.md  loose-mails-slide.md  solid-shirts-run.md  tasty-tigers-learn.md  tidy-brooms-carry.md  tired-doors-deny.md
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  export_issue.yml  feature_request.yml  performance_issue.yml  recording_issue.yml  ux_ui_issue.yml
.github/workflows/: ci-desktop.yml  deploy-web.yml  release-desktop.yml  release-extensions.yml  release-wallpapers.yml  verify-extensions.yml
.husky/: pre-commit
apps/desktop/: .env.example  .gitignore  DESIGN.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/desktop/docs/: cross-platform-support-plan.md
apps/desktop/src/: app.css  app.d.ts  app.html
apps/desktop/src-tauri/: .env.example  Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cache.rs  ffmpeg.rs  lib.rs  main.rs  silence.rs  telemetry.rs  tray.rs  window_aspect.rs
apps/desktop/src-tauri/src/audio/: mod.rs  wav.rs
apps/desktop/src-tauri/src/audio/platform/: fallback.rs  ffmpeg_unix.rs  macos_sckit.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/camera/: mod.rs
apps/desktop/src-tauri/src/camera/platform/: fallback.rs  ffmpeg_unix.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/capture/: mod.rs
apps/desktop/src-tauri/src/capture/platform/: fallback.rs  linux_wayland.rs  linux_x11.rs  macos.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/commands/: assets.rs  auth.rs  cloud.rs  editor.rs  extensions.rs  ffmpeg.rs  files.rs  gdrive.rs  mod.rs  recording.rs  system.rs  types.rs
apps/desktop/src-tauri/src/cursor/: mod.rs  smoothing.rs
apps/desktop/src-tauri/src/cursor/platform/: device_query_impl.rs  fallback.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/encoder/: mod.rs
apps/desktop/src-tauri/src/project/: autosave.rs  mod.rs  reader.rs  writer.rs
apps/desktop/src-tauri/src/recording/: mod.rs  pipeline.rs
apps/desktop/src-tauri/src/render/: cursor_anim.rs  cursor_export.rs  easing.rs  graph.rs  mask_export.rs  mod.rs  node_types.rs
apps/desktop/src/components/: FirstRunConsent.svelte  corner-notifications.svelte  logo.svelte  whats-new-dialog.svelte
apps/desktop/src/components/cloud/: ShareManageDialog.svelte
apps/desktop/src/components/common/: LazyExternalImage.svelte
apps/desktop/src/components/doove/: ActionPanel.svelte  ConfirmDialog.svelte  DooveCard.svelte  PlayerDialog.svelte  RecastList.svelte  RecastRow.svelte  RenameDialog.svelte  TopProgress.svelte  index.ts  types.ts
apps/desktop/src/components/editor/: EditorToolbar.svelte  ExportDialog.svelte  ExportFlowDialog.svelte  InspectorHint.svelte  PresetPicker.svelte  SilenceReviewPopover.svelte  Timeline.svelte  VideoPlayerControls.svelte  VideoPreview.svelte  WatermarkPanel.svelte  ZoomSuggestionsPopover.svelte
apps/desktop/src/components/layout/: CommandPaletteHost.svelte  MobileHeader.svelte  PageShell.svelte  SearchCommandMenu.svelte  SectionCard.svelte  SettingsRow.svelte  ShortcutsDialog.svelte  app-sidebar.svelte  custom-titlebar.svelte
apps/desktop/src/components/settings/: CloudEndpoint.svelte  CloudSignIn.svelte  DeviceCapabilities.svelte  DiagnosticsPanel.svelte  GoogleDriveConnection.svelte
apps/desktop/src/components/skeletons/: DashboardSkeleton.svelte  EditorSkeleton.svelte  SourceSelectorSkeleton.svelte
apps/desktop/src/constants/: app.ts  changelog.ts
apps/desktop/src/lib/: assets.ts  canvas-geometry.ts  capabilities.ts  commands.ts  env.ts  extensions.ts  feature-flags.ts  ipc.ts  licensing.svelte.ts  morph.ts  openProject.ts  profiles.ts  service-worker.ts  share.ts
apps/desktop/src/lib/analytics/: client.ts  identity.ts
apps/desktop/src/lib/annotations/: eval.ts  hit.ts  kind-label.ts  (+4 more)
apps/desktop/src/routes/: +error.svelte  +layout.svelte
apps/landing/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js.map  vite.config.ts
apps/landing/src/: App.tsx  index.css
apps/landing/src/pages/: LandingPage.tsx
apps/web/: .env.example  .npmrc  DESIGN.md  drizzle.config.ts  motion-core.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/drizzle/: 0000_pretty_rictor.sql  0001_tough_microbe.sql  0002_thin_tiger_shark.sql  0003_gifted_talisman.sql  0004_previous_stryfe.sql  0005_natural_carnage.sql  0006_curious_mach_iv.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
apps/web/scripts/: cron-expire.mjs  r2-setup.mjs
apps/web/src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts
apps/web/src/lib/: logo.svelte
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
assets/: manifest.json
backend/: doove_licenses.sqlite  generate_keys.js  package-lock.json  package.json  server.js  sync_downloads.py
extensions/: .gitignore  README.md
extensions/packs/recast-cursors/: extension.json
extensions/schema/: extension.source.schema.json
extensions/scripts/: build-registry.mjs  serve-extensions.mjs  verify-extensions.mjs
scripts/: extract-changelog.mjs  generate-latest-json.mjs  prepare-backgrounds.mjs  release-prepare.mjs  setup.mjs  setup.ps1  setup.sh  sync-desktop-changelog.mjs
scripts/release/: build-release-body.sh  doove.rb.template  download-ffmpeg-linux.sh  download-ffmpeg-macos.sh  download-ffmpeg-windows.ps1  install-linux-deps.sh  package-msix.ps1  prepare-release-assets.ps1  recast.rb.template  rename-macos-updater-bundle.sh  sync-version.mjs  update-homebrew-cask.sh  verify-ffmpeg-sidecars.sh
(+285 files in other folders)
